--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div id="navbar" class="main_menu">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">Home</a></li>
-							<li><a href="#about">About</a></li>
+							<li><a href="#about">Amount</a></li>
 							<li><a href="#service">Service</a></li>
 							<li><a href="#portfolio">Work</a></li>
 							<li><a href="#resume">Resume</a></li>	
