--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div id="navbar" class="main_menu">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#home">Home</a></li>
-							<li><a href="#about">Amount</a></li>
+							<li><a href="#about">About</a></li>
 							<li><a href="#service">Service</a></li>
 							<li><a href="#portfolio">Work</a></li>
 							<li><a href="#resume">Resume</a></li>	
@@ -74,7 +74,7 @@
 										<b class="fw_300">Film maker</b>
 									</span>
 								</h1>
-								<p>Digital Artist with 3 years of experience in Adobe Creative Suite, specializing in 2D animation and VFX for film production. Skilled in meeting tight deadlines and collaborating effectively with teams during 10 months of film production experience.</p>
+								<p>Digital Artist with 10 years of experience in Adobe Creative Suite, specializing in 2D animation and VFX for film production. Skilled in meeting tight deadlines and collaborating effectively with teams during 10 months of film production experience.</p>
 								<ul class="banner_social_link">					
 									<li><a href="https://www.youtube.com/channel/UCoF67QLcup5oOF4F446FWMQ" target="_blank" rel="noopener noreferrer"><i class="icon youtube">
 										<i class="fab fa-youtube"></i>
